Fix/fix UI issues (#10)
* chore:added wide form factor screenshots of to-do list app and updated theme ccolour in metadata for pwa display

* chore: changed manifest to point to favicon.ico in icons section

* chore: set to-do list items to add from the top of the screen and fixed to-do list items vertical overflow bug preventing visibility of all to-do list items when too many added

* chore: set fixed hieght for ooter tpor prevent overlap of add to-do button with rendered to-dos

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,10 @@ h1 {
 #to-do-group-div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     row-gap: 20px;
 }
+
 .deleteIcon:hover {
     color: red;
 }
@@ -38,7 +39,7 @@ h1 {
     padding: 17px;
     border-radius: 25px;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
-   
+
 }
 
 #deleteAllToDosButton:hover {
@@ -58,10 +59,11 @@ h1 {
 
 
 #footer {
-    width: 100%;
-    height: 100px;
-    position: sticky;
+    padding-bottom: 5px;
+    padding-right: 15px;
+    position: fixed;
     bottom: 0;
+    right: 0;
 
 }
 
@@ -70,7 +72,7 @@ h1 {
     justify-content: center;
     flex-direction: row;
     background-color: white;
-    width:90vw;
+    width: 90vw;
     height: 60px;
     border-radius: 30px;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3)
